Version 3.8

* IMPROVEMENT: Added KSI_AggregationHashChain_calculateShape.
* IMPROVEMENT: KSI_HashChain_aggregate and KSI_HashChain_aggregateCalendar no longer require not NULL output parameters.
* IMPROVEMENT: Added KSI_AggregationHashChain_aggregate function.
* IMPROVEMENT: KSI_LIST may contain NULL values.
* BUGFIX: Certificate and publication records are not mandatory for publications file.
* IMPROVEMENT: Integration tests configuration file error handling improved.
* IMPROVEMENT: Handling for reading server responses from tlv files.
* BUGFIX: Removed unused function.
* BUGFIX: Fixed macro redefinition issue.
* IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
* IMPROVEMENT: Added detailed coverage report in html format.
* IMPROVEMENT: In case of no errors KSI_ERR_getBaseErrorMessag returns string indicating that there are no errors.
* BUGFIX: KSI_ERR_getBaseErrorMessage error code returned by the output parameter fixed when error count is zero.
* BUGFIX: KSI_DataHasher memory leak on immediate reset after open.
* BUGFIX: Fixed HMAC for hash functions with other than 512 bit internal block size.

Version 3.7

2016-01-26 release(3.7.1037)
* BUGFIX: Fixed building from SRPM
  Thanks to Peter Portante
* BUGFIX: Compilation issues under Fedora 21
  Thanks to Peter Portante
* IMPROVEMENT: Versioning includes 
* BUGFIX: KSI_Signature_getDocumentHash fixed when applied to legacy signature.
* BUGFIX: KSI_MultiSignature_get fixed when extracting legacy signature.
* BUGFIX: KSI_MultiSignature_remove fixed when removing legacy signature.

Version 3.4

2015-12-09 release(3.4.0.6)
* Added mime-type to http requests.

2015-09-14 release(3.4.0.1)
* Removed all default endpoints.
* Added multi signature container.
* Publications file parsing and verification are now more strict.
* Publications file verification customizable.
* Added fast tlv parser.
* Fixed getLatestPublication and getNearestPublication.
* Restructured logging (new log levels).